--- a/10-Regression.qmd
+++ b/10-Regression.qmd
@@ -902,10 +902,10 @@ To maintain consistency across chapters and enable meaningful comparison with ea
 ```{r}
 set.seed(42)
 
-data_sets = partition(data = churn_mlc, ratio = c(0.8, 0.2))
+splits = partition(data = churn_mlc, ratio = c(0.8, 0.2))
 
-train_set = data_sets$part1
-test_set  = data_sets$part2
+train_set = splits$part1
+test_set  = splits$part2
 
 test_labels = test_set$churn
 ```
@@ -974,14 +974,14 @@ The object `bayes_probs` is a matrix in which each row corresponds to a test obs
 
 The k-Nearest Neighbors (kNN) algorithm is a non-parametric, instance-based classifier that assigns a class label to each test observation based on the majority class among its $k$ closest neighbors in the training set. Because kNN relies entirely on distance calculations, it is particularly sensitive to the scale and encoding of the input features.
 
-We train a kNN model using the `kNN()` function from the **liver** package, setting the number of neighbors to $k = 5$. This choice is informed by experimentation with different values of $k$ using the `kNN.plot()` function, as discussed in Chapter [-@sec-ch7-knn-choose-k]. To ensure that all predictors contribute appropriately to distance computations, we apply min–max scaling and binary encoding using the `scaler = "minmax"` option:
+We train a kNN model using the `kNN()` function from the **liver** package, setting the number of neighbors to $k = 7$. This choice is informed by experimentation with different values of $k$ using the `kNN.plot()` function, as discussed in Chapter [-@sec-ch7-knn-choose-k]. To ensure that all predictors contribute appropriately to distance computations, we apply min–max scaling and binary encoding using the `scaler = "minmax"` option:
 
 ```{r}
 knn_probs = kNN(
   formula = formula,
   train   = train_set,
   test    = test_set,
-  k       = 5,
+  k       = 7,
   scaler  = "minmax",
   type    = "prob"
 )
