--- a/11-Tree-based-models.qmd
+++ b/11-Tree-based-models.qmd
@@ -284,10 +284,10 @@ To assess how well the models generalize to new data, the dataset is partitioned
 ```{r}
 set.seed(6)
 
-data_sets = partition(data = adult, ratio = c(0.8, 0.2))
+splits = partition(data = adult, ratio = c(0.8, 0.2))
 
-train_set = data_sets$part1
-test_set  = data_sets$part2
+train_set = splits$part1
+test_set  = splits$part2
 
 test_labels = test_set$income
 ```
