--- a/12-Neural-networks.qmd
+++ b/12-Neural-networks.qmd
@@ -350,10 +350,10 @@ To maintain consistency with earlier chapters, we apply the `partition()` functi
 ```{r}
 set.seed(500)
 
-data_sets = partition(data = bank, ratio = c(0.8, 0.2))
+splits = partition(data = bank, ratio = c(0.8, 0.2))
 
-train_set = data_sets$part1
-test_set  = data_sets$part2
+train_set = splits$part1
+test_set  = splits$part2
 
 test_labels = test_set$deposit
 ```
