--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -46,7 +46,7 @@ Effective storytelling in data science weaves together analytical results, domai
 
 visualization plays a central role in this process. Summary statistics provide a compact overview of central tendency and variability, but visual displays make patterns and irregularities more apparent. Scatter plots and correlation matrices help reveal relationships among numerical features, while histograms, box plots, and categorical visualizations clarify distributions, skewness, and group differences. Selecting appropriate visual tools strengthens both analytical reasoning and interpretability.
 
-Storytelling through data is widely used across domains, including business analytics, journalism, public policy, and scientific research. A well-known example is Hans Rosling’s TED Talk [*New insights on poverty*](https://www.ted.com/talks/hans_rosling_new_insights_on_poverty), in which decades of demographic and economic data are presented in a clear and engaging manner. Figure [-@fig-EDA-fig-1], adapted from this work, visualises changes in GDP per capita and life expectancy across world regions from 1950 to 2019. The figure is generated using the *gapminder* dataset from the **liver** package and visualised with the **ggplot2** package. Although drawn from global development data, the same principles of exploratory analysis apply when examining customer behavior, financial trends, or service outcomes.
+Storytelling through data is widely used across domains, including business analytics, journalism, public policy, and scientific research. A well-known example is Hans Rosling’s TED Talk [*New insights on poverty*](https://www.ted.com/talks/hans_rosling_new_insights_on_poverty), in which decades of demographic and economic data are presented in a clear and engaging manner. Figure [-@fig-EDA-fig-1] visualises changes in GDP per capita and life expectancy across world regions from 1950 to 2019. The figure is generated using the *gapminder* dataset from the **liver** package and visualised with the **ggplot2** package. Although drawn from global development data, the same principles of exploratory analysis apply when examining customer behavior, financial trends, or service outcomes.
 
 Figure [-@fig-EDA-fig-1] reveals several broad patterns that emerge through exploratory visualization. Across all regions, both GDP per capita and life expectancy increase substantially between 1950 and 2019, indicating a strong association between economic development and population health. This trend is particularly pronounced for Western countries, which display consistently higher levels of both variables and a more pronounced upward shift over time. Other regions show more gradual improvement and greater dispersion, reflecting heterogeneous development trajectories. While these patterns are descriptive rather than causal, they illustrate how exploratory visualization helps surface broad global trends.
 
@@ -262,7 +262,6 @@ Before deciding how to handle the missing values, we assess their extent. The **
 library(naniar)
 gg_miss_var(churn, show_pct = TRUE)
 ```
-
 
 The plot shows that missing values are confined to three categorical features, with the highest proportion occurring in `education` (approximately 15%). Strategies for handling missing categorical data are discussed in detail in Chapter [-@sec-ch3-imputation-techniques]. For the purposes of exploratory analysis, we apply random imputation to preserve the observed distribution of each feature and avoid distorting group comparisons. We therefore apply random imputation using the `impute()` function from the **Hmisc** package:
 
@@ -598,7 +597,7 @@ knitr::include_graphics("images/ch4_correlation.png")
 
 We emphasize that correlation does not imply causation. For example, a strong positive correlation between customer service contacts and churn does not mean that contacting customer service causes customers to leave. Both behaviors may instead reflect an underlying factor, such as dissatisfaction with service.
 
-A well-known illustration of this principle is shown in Figure [-@fig-correlation-chocolate], adapted from @messerli2012chocolate, which depicts a strong correlation between per-capita chocolate consumption and Nobel Prize wins across countries. While clearly not causal, the example highlights how correlations can arise through coincidence or shared underlying factors. Readers interested in causal reasoning may consult *The Book of Why* by Judea Pearl and Dana Mackenzie [-@pearl2018book] for an accessible introduction.
+A well-known illustration of this principle is shown in Figure [-@fig-correlation-chocolate] which depicts a strong correlation between per-capita chocolate consumption and Nobel Prize wins across countries [@messerli2012chocolate]. While clearly not causal, the example highlights how correlations can arise through coincidence or shared underlying factors. Readers interested in causal reasoning may consult *The Book of Why* by Judea Pearl and Dana Mackenzie [-@pearl2018book] for an accessible introduction.
 
 ```{r fig-correlation-chocolate, echo = FALSE, out.width = "85%", fig.cap = "Scatterplot illustrating the correlation between Nobel Prize wins and chocolate consumption (per 10 million population) across countries."}
 
