--- a/6-Setup-data.qmd
+++ b/6-Setup-data.qmd
@@ -105,10 +105,10 @@ The `partition()` function divides a dataset into subsets based on a specified r
 ```{r}
 set.seed(42)
 
-data_sets = partition(data = churn, ratio = c(0.8, 0.2))
+splits = partition(data = churn, ratio = c(0.8, 0.2))
 
-train_set = data_sets$part1
-test_set  = data_sets$part2
+train_set = splits$part1
+test_set  = splits$part2
 
 test_labels = test_set$churn
 ```
