--- a/9-Naive-Bayes.qmd
+++ b/9-Naive-Bayes.qmd
@@ -210,8 +210,7 @@ $$
 
 This would cause every married borrower to be classified as `good risk`, regardless of other features.
 
-Laplace smoothing resolves this by adjusting the count of each category. A small constant $k$ (typically $k = 1$) is added to each count, yielding:
-$$
+Laplace smoothing resolves this by adjusting the count of each category. A small constant $k$ (typically $k = 1$) is added to each count, yielding: $$
 P(\text{bad risk} | \text{married}) = \frac{\text{count}(\text{bad risk} \cap \text{married}) + k}{\text{count}(\text{married}) + k \times \text{number of marital categories}}.
 $$
 
@@ -291,10 +290,10 @@ Before training the Naive Bayes classifier, we partition the dataset into traini
 ```{r}
 set.seed(5)
 
-data_sets = partition(data = risk, ratio = c(0.8, 0.2))
+splits = partition(data = risk, ratio = c(0.8, 0.2))
 
-train_set = data_sets$part1
-test_set  = data_sets$part2
+train_set = splits$part1
+test_set  = splits$part2
 
 test_labels = test_set$risk
 ```
