--- a/packages.bib
+++ b/packages.bib
@@ -80,6 +80,14 @@ Enhancements},
   url = {https://ggplot2.tidyverse.org},
 }
 
+@Manual{R-gifski,
+  title = {gifski: Highest Quality GIF Encoder},
+  author = {Jeroen Ooms and {Kornel Lesiński} and {Authors of the dependency Rust crates}},
+  year = {2025},
+  note = {R package version 1.32.0-2},
+  url = {https://r-rust.r-universe.dev/gifski},
+}
+
 @Manual{R-here,
   title = {here: A Simpler Way to Find Your Files},
   author = {Kirill Müller},
